[LFC][IFC] Fix fast/lists/list-marker-before-float-nested.html https://bugs.webkit.org/show_bug.cgi?id=244912

Reviewed by Antti Koivisto.

'outside' list marker should not only be placed outside of the line box, but it should also avoid floats on the line.
Let's compute the line box offset (normally 0) which is the distance between the initial line (logical) left and the left side of the final line box (floats, text-indent etc).

* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::lineLayout):
(WebCore::Layout::InlineFormattingContext::computeGeometryForLineContent):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.h:
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::build):
(WebCore::Layout::InlineDisplayContentBuilder::outsideListMarkerVisualPosition const):
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.h:

Canonical link: https://commits.webkit.org/254305@main